syntax = "proto3";

message Operands {
    int32 a = 1;
    int32 b = 2;
}

message SumResult {
    int32 result = 1;
}